# clear-issue-watcher

./: DESIGN.md  README.md  com.clear.issue-watcher.plist.template  install.ps1  install.sh  monitor.py  pyproject.toml  sessions.sh  triage-prompt.md  watch.py
watcher/: __init__.py  attach.py  cli.py  config.py  engine.py  run_cycle.py  runtime.py  scheduler.py  triage-prompt.md  tui.py
watcher/adapters/: __init__.py  base.py  github.py  jetrix.py
